removed slash from url in homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://edustef.github.io/markdown-fcc/",
+  "homepage": "https://edustef.github.io/markdown-fcc",
   "name": "markdown-fcc",
   "version": "0.1.0",
   "private": true,
