--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "dompurify": "^2.0.8",
+    "file-saver": "^2.0.2",
     "marked": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
